Attempted to fix page-break printout problem on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -1071,7 +1071,7 @@ section {
     .card:hover {
         box-shadow: var(--box-shadow-hover-light-mode);
     }
-    
+
     .card * {
         color: var(--solid-heading-dark-mode);
     }
@@ -1131,13 +1131,13 @@ section {
 
     .break-inside--avoid {
         break-inside: avoid;
-        display: inline-table; /* Make element unbreakable for Safari */
+        /* display: inline-table; Make element unbreakable for Safari */
     }
 
     .card {
         box-shadow: none;
         break-inside: avoid;
-        display: inline-table; /* Make element unbreakable for Safari */
+        /* display: inline-table; Make element unbreakable for Safari */
         box-shadow: var(--box-shadow-tiny-light-mode);
     }
 
